tests-integration/fixtures/checking/1772567340_derive_eq_1_higher_kinded/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
MkWrap ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    Wrap @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))
MkWrapNoEq1 ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    WrapNoEq1 @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))

Types
Wrap :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type
WrapNoEq1 :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type

Derived
derive forall (t :: Type -> Type) (t1 :: Type).
  Eq1 (t :: Type -> Type) => Eq (t1 :: Type) => Eq (Wrap @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type) (t1 :: Type -> Type).
  Eq (t :: Type) => Eq (WrapNoEq1 @Type (t1 :: Type -> Type) (t :: Type))

Roles
Wrap = [Representational, Nominal]
WrapNoEq1 = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq1 (t :: Type -> Type)
  --> 11:1..11:43
   |
11 | derive instance Eq a => Eq (WrapNoEq1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Eq (t1 :: Type) is in scope
